oxiplate/tests/broken/escaping/default-escaper-group-after-content.stderr
error: Unexpected 'default_escaper_group' statement after content already present in template
 --> tests/broken/escaping/default-escaper-group-after-content.rs:4:60
  |
4 | #[oxiplate_inline("<!DOCTYPE html>{% default_escaper_group html %}{{ title }}")]
  |                                                            ^^^^
